(Desktop) alignment fixes

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -34,6 +34,9 @@ overflow: hidden;
  .home-title p{
     font-family: 'Nunito-Regular';
     font-size: 24px;
+    margin-top: -1%;
+    margin-bottom: 4%;
+
 
     }
 
@@ -133,8 +136,8 @@ overflow: hidden;
     border-radius: 45px;
     width: 9.5em;
     text-align: center;
-    height: 40px; 
-    width: 190px; 
+    height: 50px; 
+    width: 200px; 
     color:#ffffff; 
     font-family: 'Nunito-Bold';
     font-size: 24px;
@@ -436,6 +439,7 @@ overflow: hidden;
     background-image: url(./assets/footer.png) ;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: -10%;
 
 }
 
@@ -443,7 +447,7 @@ overflow: hidden;
 .way-containerk h3{
     padding: 50%;
     margin-left: -50%;
-    padding-top: 62.5%;
+    padding-top: 60.5%;
     width: 100%;
     color: #ffffff ;
     font-family:'Nunito-Bold';
@@ -452,12 +456,19 @@ overflow: hidden;
 
     font-size: 56px}
 
+    
+    .way-containerbutton {
+        margin-top: -47.5%;
+        margin-left: 42.75%;
+
+    }
+
 
    
     .insta {
         background-image: url(./assets/insta.svg) ;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -467,8 +478,8 @@ overflow: hidden;
     .insta:hover{
         cursor: pointer;
         background-image: url(./assets/instaf.svg) ;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -477,8 +488,8 @@ overflow: hidden;
 
     .email {
         background-image: url(./assets/email.svg) ;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -488,8 +499,8 @@ overflow: hidden;
     .email:hover{
         cursor: pointer;
         background-image: url(./assets/emailf.svg) ;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -498,8 +509,8 @@ overflow: hidden;
 
     .face {
         background-image: url(./assets/fb.svg) ;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -509,8 +520,8 @@ overflow: hidden;
     .face:hover{
         cursor: pointer;
         background-image: url(./assets/fbf.svg) ;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -529,33 +540,35 @@ overflow: hidden;
 
 
 .way-containerz {
-    margin-top: -20%;
+    margin-top: 25.5%;
 }
 
 .phonez {
     
     padding-left: 5.5%;
 }
-.alogo img {
-    height: 70px;
-    width: 70px;
-    margin-left: 47%;
-    margin-bottom: 12%;
+.glogo img {
+    height: 55px;
+    width: 55px;
+    margin-left: 47.750%;
+    margin-bottom: 13%;
 
 }
 
 
-.privacy {
+.privacyy {
     text-align: center;
 }
 
-.privacy h3{
+.privacyy p{
     padding-top: 2%;
 
     font-family: 'Nunito-Regular';
 
     text-align: center;
     font-size: 16px;
+    color: #C4C4C4;
+
 /* identical to box height */
 
 
@@ -563,10 +576,10 @@ color: #C4C4C4;
 
 }
 
-.privacy a{
+.privacyy a{
 
     margin-top: 30%;
-
+    text-decoration: none;
     font-family: 'Nunito-Regular';
     text-align: center;
     font-size: 16px;
@@ -577,7 +590,7 @@ color: #C4C4C4;
 }
 
 
-.privacy a:hover{
+.privacyy a:hover{
     cursor: pointer;
     
     margin-top: 30%;
@@ -593,16 +606,38 @@ color: #12b2eb;
 }
 
 
-.privacy {
+.privacyy {
     margin-top: 4%;
     margin-bottom: 5%;
     
 
 }
-.mobile 
-{
-    display:none;
+
+.mobile {
+    display:none
 }
+
+.btnz { 
+    cursor: pointer; 
+    color: #ffffff;
+    border: white;
+    background-color: #ffffff;
+    border-radius: 45px;
+    width: 9.5em;
+    text-align: center;
+    height: 50px; 
+    width: 200px; 
+    color:#B174F7; 
+    font-family: 'Nunito-Bold';
+    font-size: 24px;
+
+} 
+
+
+
+
+
+    
 
 
 
@@ -1204,11 +1239,11 @@ color: #12b2eb;
 }
 
 
-.privacy {
+.privacyy {
     text-align: center;
 }
 
-.privacy h3{
+.privacyy h3{
     padding-top: 2%;
 
     font-family: 'Nunito-Regular';
@@ -1222,7 +1257,7 @@ color: #C4C4C4;
 
 }
 
-.privacy a{
+.privacyy a{
 
     margin-top: 30%;
 
@@ -1236,7 +1271,7 @@ color: #C4C4C4;
 }
 
 
-.privacy a:hover{
+.privacyy a:hover{
     cursor: pointer;
     
     margin-top: 30%;
@@ -1252,7 +1287,7 @@ color: #12b2eb;
 }
 
 
-.privacy {
+.privacyy {
     margin-top: 4%;
     margin-bottom: 5%;
     
@@ -1853,11 +1888,11 @@ color: #12b2eb;
 }
 
 
-.privacy {
+.privacyy {
     text-align: center;
 }
 
-.privacy h3{
+.privacyy h3{
     padding-top: 2%;
 
     font-family: 'Nunito-Regular';
@@ -1871,7 +1906,7 @@ color: #C4C4C4;
 
 }
 
-.privacy a{
+.privacyy a{
 
     margin-top: 30%;
 
@@ -1885,7 +1920,7 @@ color: #C4C4C4;
 }
 
 
-.privacy a:hover{
+.privacyy a:hover{
     cursor: pointer;
     
     margin-top: 30%;
@@ -1901,7 +1936,7 @@ color: #12b2eb;
 }
 
 
-.privacy {
+.privacyy {
     margin-top: 4%;
     margin-bottom: 5%;
     
